--- a/New rules/task-info.yaml
+++ b/New rules/task-info.yaml
@@ -13,5 +13,8 @@ files:
     visible: false
     learner_created: false
 feedback_link: https://hyperskill.org/projects/258/stages/1303/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Fri, 31 Oct 2025 01:55:34 UTC"
 record: -1
