--- a/Working on the gameplay/task-info.yaml
+++ b/Working on the gameplay/task-info.yaml
@@ -13,5 +13,8 @@ files:
     visible: false
     learner_created: false
 feedback_link: https://hyperskill.org/projects/258/stages/1304/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Fri, 31 Oct 2025 06:08:27 UTC"
 record: -1
